DBT-310 fix logo flicker

--- a/src/main/resources/META-INF/resources/scss/dbt/_general.scss
+++ b/src/main/resources/META-INF/resources/scss/dbt/_general.scss
@@ -14,7 +14,6 @@ a:focus {
 body {
   background-color: $body-bg-color;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 
 h1,
